# uichem_rx_os

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-build-push-cloud.yamll  docker-build-push-gh.yamll  static.yaml  testing.yaml
.github/workflows/ISSUE_TEMPLATE/: general_issue.md
app/: app.py  test_the_app.py
docs/docs/: app_methods.md  helpers.md  index.md
docs/site/: index.html
docs/site/uimols/: app_methods.html  helpers.html  index.html
src/uimols/: __init__.py  app_methods.py  helpers.py
tests/: test_app_methods.py
